[package]
name = "serverless-client"
version = "0.1.0"
authors = ["Minghao Xie <mhxie@ucsc.edu>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"