[package]
name = "serverless-client"
version = "0.1.0"
authors = ["Minghao Xie <mhxie@ucsc.edu>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

mock = { path = "../mock" }